--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>AdminLTE 3</title>
+        <title>Sri Vaalai Guruswamy Thunai</title>
         <base href="/" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -17,6 +17,7 @@
             rel="stylesheet"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="bs-stepper.min.css">
     </head>
     <body>
         <app-root class="sidebar-mini sidebar-open"></app-root>
